--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Install GNUPG
         shell: bash
-        run: "apt-get install gnupg"
+        run: "sudo apt-get install -y gnupg"
       
       - name: Import gpg key
         shell: bash
