--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
         run: |
-          gpg --import - "$PRIVATE_KEY"
+          echo "$PRIVATE_KEY" | gpg --import
       
       - name: Create KEY.gpg
         shell: bash
