--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,8 +60,12 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
           git add .
-          git commit -m "Update PPA"
-          git push
+          if git diff-index --quiet HEAD --; then
+            echo "Nothing to commit"
+          else
+            git commit -m "Update PPA"
+            git push
+          fi
 
       - name: Summary
         run: |
