--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Generate KEY.gpg
         shell: bash
         working-directory: ${{ env.base_dir }}
-        if: ${{ steps.key-check.missing }}
+        if: steps.key-check.missing
         run: |
           gpg --armor --export > "KEY.gpg
           echo "KEY.gpg is generated"
@@ -66,7 +66,7 @@ jobs:
       - name: Create .list
         shell: bash
         working-directory: ${{ env.base_dir }}
-        if: ${{ steps.list-check.missing }}
+        if: steps.list-check.missing
         run: |
           echo "deb [signed-by=/etc/apt/trusted.gpg.d/${{ env.list_name }}.gpg] https://${{ github.repository_owner }}.github.io/${{ env.base_dir }} ./" > "${{ env.list_name }}.list"
           echo "${{ env.list_name }}.list is generated"
@@ -88,7 +88,7 @@ jobs:
       - name: Generate Release
         shell: bash
         working-directory: ${{ env.base_dir }}
-        if: ${{ steps.generate-packages.changed }}
+        if: steps.generate-packages.changed
         run: |
           apt-ftparchive release . > Release
           gpg -abs -o - Release > Release.gpg
@@ -97,17 +97,13 @@ jobs:
       - name: Commit and push
         shell: bash
         working-directory: ${{ env.base_dir }}
-        if: ${{ steps.generate-packages.changed }}
+        if: steps.generate-packages.changed
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
           git add .
-          if git diff-index --quiet HEAD --; then
-            echo "Nothing to commit"
-          else
-            git commit -m "Update PPA"
-            git push
-          fi
+          git commit -m "Update PPA"
+          git push
 
       - name: Summary
         shell: bash
