--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Generate KEY.gpg
         shell: bash
         working-directory: ${{ env.base_dir }}
-        if: steps.key-check.missing == 'true'
+        if: steps.key-check.outputs.missing == 'true'
         run: |
           gpg --armor --export > "KEY.gpg
           echo "KEY.gpg is generated"
@@ -66,7 +66,7 @@ jobs:
       - name: Create .list
         shell: bash
         working-directory: ${{ env.base_dir }}
-        if: steps.list-check.missing == 'true'
+        if: steps.list-check.outputs.missing == 'true'
         run: |
           echo "deb [signed-by=/etc/apt/trusted.gpg.d/${{ env.list_name }}.gpg] https://${{ github.repository_owner }}.github.io/${{ env.base_dir }} ./" > "${{ env.list_name }}.list"
           echo "${{ env.list_name }}.list is generated"
@@ -88,7 +88,7 @@ jobs:
       - name: Generate Release
         shell: bash
         working-directory: ${{ env.base_dir }}
-        if: steps.generate-packages.changed == 'true'
+        if: steps.generate-packages.outputs.changed == 'true'
         run: |
           apt-ftparchive release . > Release
           gpg -abs -o - Release > Release.gpg
@@ -97,7 +97,7 @@ jobs:
       - name: Commit and push
         shell: bash
         working-directory: ${{ env.base_dir }}
-        if: steps.generate-packages.changed == 'true'
+        if: steps.generate-packages.outputs.changed == 'true'
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
