--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
         working-directory: ${{ env.base_dir }}
         run: |
           dpkg-scanpackages --multiversion . > Packages
-          if if git --no-pager diff --name-status | grep -q "Packages"; then
+          if git --no-pager diff --name-status | grep -q "Packages"; then
             gzip -k -f Packages
             echo "changed=true" >> "$GITHUB_OUTPUT"
           else
